--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "json-server": "^0.16.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4",
-	"json-server": "^0.16.3",
-	"recharts": "^1.8.5",
-	"react-simple-maps": "^2.3.0"
+    "react-simple-maps": "^2.3.0",
+    "recharts": "^1.8.5",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start:frontend": "react-scripts start",
-	"start:server": "json-server --watch ./src/data/covid-data.json --port 3001 --read-only",
+    "start:server": "json-server --watch ./src/data/covid-data.json --port 3001 --read-only",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
